@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebro_metric_loadavg.c,v 1.2 2006-08-27 05:23:53 chu11 Exp $
+ *  $Id: cerebro_metric_loadavg.c,v 1.3 2006-08-27 19:11:05 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -44,15 +44,31 @@
 #if HAVE_FCNTL_H
 #include <fcntl.h>
 #endif /* HAVE_FCNTL_H */
+#if TIME_WITH_SYS_TIME
+# include <sys/time.h>
+# include <time.h>
+#else  /* !TIME_WITH_SYS_TIME */
+# if HAVE_SYS_TIME_H
+#  include <sys/time.h>
+# else /* !HAVE_SYS_TIME_H */
+#  include <time.h>
+# endif /* !HAVE_SYS_TIME_H */
+#endif /* !TIME_WITH_SYS_TIME */
 
 #include "cerebro.h"
-#include "cerebro/cerebro_constants.h"
 #include "cerebro/cerebro_metric_module.h"
 
 #include "debug.h"
 
 #define LOADAVG_FILE                "/proc/loadavg"
 #define LOADAVG_BUFLEN              4096
+#define LOADVAG_CACHETIMEOUT        5
+
+static float cache_loadavg1;
+static float cache_loadavg5;
+static float cache_loadavg15;
+
+static unsigned long int last_read = 0;
 
 /*
  * cerebro_get_loadavgs
@@ -64,45 +80,58 @@ cerebro_metric_get_loadavgs(float *loadavg1,
 			    float *loadavg5,
 			    float *loadavg15)
 {
-  int fd, len;
-  float temp_loadavg1, temp_loadavg5, temp_loadavg15;
+  int len, fd = -1;
   char buf[LOADAVG_BUFLEN];
+  struct timeval now;
   int rv = -1;
 
-  if ((fd = open(LOADAVG_FILE, O_RDONLY, 0)) < 0)
+  if (gettimeofday(&now, NULL) < 0)
     {
-      CEREBRO_DBG(("open: %s", strerror(errno)));
+      CEREBRO_DBG(("gettimeofday: %s", strerror(errno)));
       goto cleanup;
     }
 
-  memset(buf, '\0', LOADAVG_BUFLEN);
-  if ((len = read(fd, buf, LOADAVG_BUFLEN)) < 0)
+  if ((now.tv_sec - last_read) > LOADVAG_CACHETIMEOUT) 
     {
-      CEREBRO_DBG(("read: %s", strerror(errno)));
-      goto cleanup;
+      if ((fd = open(LOADAVG_FILE, O_RDONLY, 0)) < 0)
+	{
+	  CEREBRO_DBG(("open: %s", strerror(errno)));
+	  goto cleanup;
+	}
+      
+      memset(buf, '\0', LOADAVG_BUFLEN);
+      if ((len = read(fd, buf, LOADAVG_BUFLEN)) < 0)
+	{
+	  CEREBRO_DBG(("read: %s", strerror(errno)));
+	  goto cleanup;
+	}
+      
+      if (sscanf(buf, 
+		 "%f %f %f", 
+		 &cache_loadavg1, 
+		 &cache_loadavg5, 
+		 &cache_loadavg15) != 3)
+	{
+	  CEREBRO_DBG(("loadavg file parse error"));
+	  goto cleanup;
+	}
+
+      last_read = now.tv_sec;
     }
 
-  if (sscanf(buf, 
-	     "%f %f %f", 
-	     &temp_loadavg1, 
-	     &temp_loadavg5, 
-	     &temp_loadavg15) != 3)
-    {
-      CEREBRO_DBG(("loadavg file parse error"));
-      goto cleanup;
-    }
-  
   if (loadavg1)
-    *loadavg1 = temp_loadavg1;
+    *loadavg1 = cache_loadavg1;
 
   if (loadavg5)
-    *loadavg5 = temp_loadavg5;
+    *loadavg5 = cache_loadavg5;
 
   if (loadavg15)
-    *loadavg15 = temp_loadavg15;
+    *loadavg15 = cache_loadavg15;
 
   rv = 0;
  cleanup:
+  if (fd >= 0)
+    close(fd);
   close(fd);
   return rv;
 }
